Archive2/10/75a9df498aac83/output
main.cpp:3:22: error: array bound cannot be deduced from an in-class initializer
    float Vertices[] = {0.0f, 0.5f, 1.0f, 0.5f, -0.5f, 1.0f, -0.5f, -0.5f, 1.0f};
                     ^
main.cpp:3:11: warning: private field 'Vertices' is not used [-Wunused-private-field]
    float Vertices[] = {0.0f, 0.5f, 1.0f, 0.5f, -0.5f, 1.0f, -0.5f, -0.5f, 1.0f};
          ^
1 warning and 1 error generated.
