Archive2/10/75a9df498aac83/main.cpp
class X
{
    float Vertices[] = {0.0f, 0.5f, 1.0f, 0.5f, -0.5f, 1.0f, -0.5f, -0.5f, 1.0f};
};

int main()
{
    X x;
    
    return 0;
}